--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,14 +13,18 @@
 				</div>
 			</div>
 			<nav>
+
+				{% assign pages = site.pages | sort:"order" %}
 				<ul>
-					{% for page in site.pages  %}
+
+					{% for page in pages %}
 					{% if page.title %}
 					<!-- page.path is: {{ page.path }} -->
 					<li><a href="#{{ page.title }}">{{ page.title }}</a></li>
 					{% endif %}
-					{% endfor %}
+          {% endfor %}
 				</ul>
+
 			</nav>
 		</header>
 
